C2LC-289: Updated based on pairing w/ Sepi and Daniel.

--- a/src/AudioFeedbackToggleSwitch.scss
+++ b/src/AudioFeedbackToggleSwitch.scss
@@ -12,7 +12,7 @@
         background-color: white;
         svg {
             path {
-                stroke: black;
+                stroke: none;
             }
         }
     }
