--- a/src/RefreshButton.scss
+++ b/src/RefreshButton.scss
@@ -5,8 +5,8 @@
     height: 1.4rem;
 }
 
-button.btn.RefreshButton svg {
-    stroke: #000;
+button.btn.RefreshButton svg path {
+    stroke: none;
 }
 
 button.btn.RefreshButton {
