--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -73,6 +73,10 @@ button.btn.ProgramBlockEditor__program-deleteAll-button {
     box-shadow: none;
     margin-left: 50px;
     padding: 0.5rem;
+
+    &:focus {
+        box-shadow: 0 0 0 $c2lc-focus-indicator-width black;
+    }
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button--pressed {
@@ -154,7 +158,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     background: #FFF;
     overflow: scroll;
     padding-left: 2rem;
-    padding-top: 0.5rem;
+    padding-top: 2rem;
 }
 
 .ProgramBlockEditor__program-sequence {
@@ -182,7 +186,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
 .ProgramBlockEditor__program-block-connector {
     background-color: #939595;
     min-width: 0.8rem;
-    height: 0.1rem;
+    height: 0.2rem;
 }
 
 button.ProgramBlockEditor__program-block--active {
