--- a/src/ProgramSpeedController.scss
+++ b/src/ProgramSpeedController.scss
@@ -6,17 +6,15 @@
     align-items: center;
 }
 
-
-  
-
 .ProgramSpeedController__slider {
     -webkit-appearance: none;
     border: 0;
     background-color: inherit;
-    height: 16px;
-    margin-left: 0.3rem;
-    margin-right: 0.3rem;
+    height: 32px;
+    margin-left: 0.6em;
+    margin-right: 0.6rem;
     overflow: hidden;
+    width: 179px;
 
     &:focus {
         outline-color: $c2lc-focus-indicator-color;
@@ -29,48 +27,53 @@
         border: 0;
         -webkit-appearance: none;
         background-color: black;
-        height:8px;
+        // TODO; 50% l/r 0% top bottom?
+        border-radius: inherit;
+        height: 16px;
         overflow: hidden;
     }
 
     &::-webkit-slider-thumb {
+    }
+
+
+    &::-webkit-slider-thumb {
         -webkit-appearance: none;
-        width: 8px;
-        height: 8px;
-        border: 0;
-        border-left-color: blue;
+        background-color: #F97953;
+        border: 2px solid black;
         border-radius: 0;
-        background-color: blue;
-        box-shadow: -8rem 0 0 8rem blue;
+        box-shadow: -8rem 0 0 8rem #F97953;
+        height: 16px;
+        width: 16px;
     }
     
+
     &::-moz-range-thumb {
-        width: 8px;
-        height: 8px;
-        border: 0;
-        border-radius: 0;
+        background-color: #F97953;
         border: 2px solid black;
-        background-color: black;
-        box-shadow: -8rem 0 0 8rem blue;
+        border-radius: 0;
+        box-shadow: -8rem 0 0 8rem #F97953;
+        height: 16px;
+        width: 16px;
     }
-
+   
     &::-moz-range-progress {
-        height:8px;
-        background-color: #43e5f7; 
+        height:16px;
+        background-color: #F97953; 
         overflow: hidden;
     }
-
+    
     &::-moz-range-track {
-        height:8px;
+        height:16px;
         overflow: hidden;
-        background-color: #9a905d;
+        background-color: black;
     }
 
     &::-ms-fill-lower {
-        background-color: #43e5f7; 
+        background-color: #F97953; 
     }
 
     &::-ms-fill-upper {  
-        background-color: #9a905d;
+        background-color: black;    
     }
 }
