--- a/src/index.scss
+++ b/src/index.scss
@@ -37,8 +37,8 @@ button.btn {
 
 button.btn:focus {
     box-shadow:
-        0 0 0 0.1rem white,
-        0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
+        0 0 0 $c2lc-focus-indicator-width #30444E,
+        0 0 0 $c2lc-focus-indicator-width white;
     z-index: 1;
 }
 
