--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,7 @@ button.btn {
 
 button.btn:focus {
     box-shadow:
-        0 0 0 $c2lc-focus-indicator-width #30444E,
+        0 0 0 0.1rem #30444E,
         0 0 0 $c2lc-focus-indicator-width white;
     z-index: 1;
 }
