C2LC-289: Updated styles for action menu based on new designs.

--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -1,38 +1,33 @@
 @import 'variables';
 
-// TODO: Rework the arrow implementation. For example, it is not quite
-//       centered with respect to the action panel.
+.ActionPanel__background {
+    align-self: center;
+    height: $c2lc-action-panel-height;
+    position: absolute;
+    top: -0.3rem;
+    width: $c2lc-action-panel-width;
+    z-index: 1;
+
+    svg {
+        width: $c2lc-action-panel-width;
+        path {
+            fill: #30444E;
+            stroke: #4C9990;
+        }
+    }
+}
 
 .ActionPanel__panel {
-    width: $c2lc-action-panel-width;
-    height: $c2lc-action-panel-height;
-    background-color: #F1F1F1;
-    border: 0.1rem solid #939595;
-    border-radius: 3rem;
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
-}
-
-.ActionPanel__panel::before {
-    content: '';
+    background-color: transparent;
+    display: flex;
+    height: $c2lc-action-panel-height;
+    justify-content: space-evenly;
+    padding-left: 2rem;
+    padding-right: 2rem;
     position: absolute;
-    left: 46.5%;
-    top: 100%;
-    border-left: 0.56rem solid transparent;
-    border-top: 0.8rem solid #F1F1F1;
-    border-right: 0.56rem solid transparent;
-    z-index: 1;
-}
-
-.ActionPanel__panel::after {
-    content: '';
-    position: absolute;
-    left: 45.5%;
-    top: 100%;
-    border-left: 0.7rem solid transparent;
-    border-top: 1rem solid #939595;
-    border-right: 0.7rem solid transparent;
+    width: $c2lc-action-panel-width;
+    z-index: 2;
 }
 
 .ActionPanel__panel--hidden {
@@ -40,17 +35,56 @@
 }
 
 button.btn.ActionPanel__action-buttons {
-    background-color: #8F8F8F;
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
-    padding: 0.3rem;
+    background-color: #4C9990;
+    border: none;
+    border-radius: 50%;    
+    height: 2.1rem;
+    padding: 0.5rem;
+    width: 2.1rem;
+
+    svg {
+        height: 1rem;
+        width: 1rem;
+        path.stroked {
+            stroke: #505862;
+        }
+        path.filled {
+            fill: #505862;
+        }
+    }
+
+    &:hover {
+        background-color: #F1AE5B;
+    }
+
+    &:hover {
+        svg {
+            path.stroked {
+                stroke: #F1F2F4;
+            }
+            path.filled {
+                fill: #F1F2F4;
+            }
+        }
+    }
+
+    &:focus {
+        box-shadow:
+            0 0 0 0.1rem #30444E,
+            0 0 0 $c2lc-focus-indicator-width white;
+    }
 }
 
 button.btn.ActionPanel__action-buttons--disabled {
-    opacity: 0.3;
+    svg {
+        path.stroked {
+            stroke: #B9BEC6;
+        }
+        path.filled {
+            fill: #B9BEC6;
+        }
+    }
 }
-
 
 .ActionPanel__action-button-svg {
     position: relative;
